Доработан криптоалгоритм Диффи-Хеллмана, тестовая версия RSA без обмена ключами
Следует улучшить RSA и добавить обмен ключами меж пользователями

--- a/3-й семестр/Lab1/Lab1/Lab1.vcxproj
+++ b/3-й семестр/Lab1/Lab1/Lab1.vcxproj
@@ -127,9 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DH.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RSA.cpp" />
-    <ClCompile Include="TransformText.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Class_for_crypto_algorithm.h" />
