--- a/3-й семестр/Lab1/Lab1/Lab1.vcxproj.filters
+++ b/3-й семестр/Lab1/Lab1/Lab1.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="RSA.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="TransformText.cpp">
+    <ClCompile Include="DH.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
