--- a/3-й семестр/Lab1/Lab1/Lab1.vcxproj.filters
+++ b/3-й семестр/Lab1/Lab1/Lab1.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="DH.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ElGam.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="SH.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Class_for_crypto_algorithm.h">
