Lab4 final version

--- a/3-й семестр/Lab 4/Lab 4/Lab 4.vcxproj
+++ b/3-й семестр/Lab 4/Lab 4/Lab 4.vcxproj
@@ -20,6 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MembersFunc.cpp" />
+    <ClCompile Include="Menu.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Application.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
