--- a/3-й семестр/Lab 4/Lab 4/Lab 4.vcxproj.filters
+++ b/3-й семестр/Lab 4/Lab 4/Lab 4.vcxproj.filters
@@ -27,7 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
