--- a/RGR/package.json
+++ b/RGR/package.json
@@ -7,20 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "moment": "^2.29.4",
-    "node-telegram-bot-api": "^0.61.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.9",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
     "scss": "^0.2.4",
-    "web-vitals": "^2.1.4",
-    "xml2js": "^0.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
