--- a/4-й семестр/RGR/package.json
+++ b/4-й семестр/RGR/package.json
@@ -11,11 +11,13 @@
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "node-telegram-bot-api": "^0.61.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.9",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-native-fs": "^2.20.0",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
     "scss": "^0.2.4",
